--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+    "version": 2,
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/dist/server.js" }
+    ],
     "builds": [
       {
         "src": "dist/server.js",
